--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "next-shadcn-dashboard-starter",
+  "name": "e-wheels-battery-management",
   "version": "1.0.0",
   "private": true,
   "author": {
-    "name": "Kiran",
-    "url": "https://github.com/Kiranism"
+    "name": "E-Wheels Development Team",
+    "url": "https://github.com/ilan2004/Ev-wheels"
   },
   "scripts": {
     "dev": "next dev --turbopack",
