--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "date-fns": "^4.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "15.1.0",
+    "framer-motion": "^12.23.21",
     "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
@@ -86,7 +87,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "react-responsive": "^10.0.0",
+    "react-responsive": "^10.0.1",
     "recharts": "^2.15.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
