Fix build errors and Windows Husky hooks; add queue 'unassigned' preset and Kanban priority handler; type fixes for vehicles and customers; stabilize Set usage

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prepare": "husky",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "seed:mock": "node scripts/seed_mock_data.cjs"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,css,less,scss,sass}": [
