--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -107,6 +109,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
@@ -115,16 +120,13 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "dotenv": "^17.2.2",
     "husky": "^9.1.7",
+    "jsdom": "^24.1.0",
     "lint-staged": "^15.2.11",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tw-animate-css": "^1.2.4",
-    "vitest": "^2.1.5",
-    "jsdom": "^24.1.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.6.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "vite-tsconfig-paths": "^5.1.3"
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.5"
   },
   "overrides": {
     "@types/react": "19.0.1",
