chore: commit pending changes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
-    "seed:mock": "node scripts/seed_mock_data.cjs"
+    "seed:mock": "node scripts/seed_mock_data.cjs",
+    "reset:dev": "node scripts/reset_data_keep_ilan_kochi.cjs"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,css,less,scss,sass}": [
