--- a/package.json
+++ b/package.json
@@ -132,7 +132,9 @@
   },
   "overrides": {
     "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
+    "@types/react-dom": "19.0.2"
+  },
+  "dependencies": {
     "import-in-the-middle": "1.14.2"
   }
 }
