--- a/package.json
+++ b/package.json
@@ -61,12 +61,15 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.21",
     "import-in-the-middle": "1.14.2",
+    "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-responsive": "^10.0.1",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.2",
