--- a/package.json
+++ b/package.json
@@ -88,7 +88,9 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.8"
+    "uuid": "^11.0.3",
+    "zod": "^4.1.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
