--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -74,14 +75,20 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.21",
     "import-in-the-middle": "1.14.2",
+    "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
+    "match-sorter": "^8.0.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
+    "nuqs": "^2.4.1",
     "react": "19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^2.1.7",
     "react-responsive": "^10.0.1",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
@@ -89,6 +96,7 @@
     "tailwindcss": "^4.0.17",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
+    "vaul": "^1.1.2",
     "zod": "^4.1.8",
     "zustand": "^5.0.2"
   },
